--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="ms">
 <head>
 <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 <title>WebApp Flashcard Doa Umrah</title>
 <style>
+  /* Reset and base */
   body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background: #f0f4ff;
@@ -18,31 +19,33 @@
     background-color: #0047ab;
     color: white;
     width: 100%;
-    padding: 12px 0;
+    padding: 14px 0;
     text-align: center;
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     font-weight: 700;
+    box-shadow: 0 3px 8px rgba(0,0,0,0.1);
   }
   main {
     flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px;
+    padding: 15px 20px;
     width: 100%;
-    max-width: 360px;
+    max-width: 420px;
   }
   .flashcard-container {
     perspective: 1200px;
-    width: 320px;
-    height: 220px;
+    width: 100%;
+    max-width: 380px;
+    height: 250px;
   }
   .flashcard {
     width: 100%;
     height: 100%;
     background: white;
-    border-radius: 15px;
-    box-shadow: 0 6px 18px rgba(0,0,0,0.15);
+    border-radius: 18px;
+    box-shadow: 0 6px 20px rgba(0,0,0,0.18);
     cursor: pointer;
     position: relative;
     transform-style: preserve-3d;
@@ -50,8 +53,9 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 20px;
+    padding: 24px 26px;
     box-sizing: border-box;
+    user-select: none;
   }
   .flashcard.flipped {
     transform: rotateY(180deg);
@@ -60,67 +64,103 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    border-radius: 15px;
+    border-radius: 18px;
     backface-visibility: hidden;
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    padding: 15px;
+    padding: 20px;
   }
   .flashcard-front {
     background-color: #0047ab;
     color: white;
-    font-size: 1.3rem;
+    font-size: 1.35rem;
     font-weight: 600;
     direction: rtl;
   }
   .flashcard-front .arabic {
-    font-size: 1.7rem;
-    margin-bottom: 10px;
+    font-size: 2.0rem;
+    margin-bottom: 14px;
+    line-height: 1.3;
   }
   .flashcard-back {
     background-color: #e8f0ff;
     color: #222;
     transform: rotateY(180deg);
-    font-size: 1.1rem;
+    font-size: 1.15rem;
   }
   .flashcard-back .rumi {
     font-style: italic;
-    margin-bottom: 12px;
+    margin-bottom: 14px;
+    line-height: 1.4;
   }
   .flashcard-back .meaning {
-    font-weight: 600;
+    font-weight: 700;
+    line-height: 1.4;
   }
   .controls {
-    margin-top: 15px;
+    margin-top: 20px;
     display: flex;
     justify-content: center;
-    gap: 30px;
+    gap: 20px;
+    width: 100%;
+    max-width: 420px;
+    padding: 0 15px;
+    box-sizing: border-box;
   }
   button {
+    flex: 1;
+    min-width: 80px;
     background-color: #0047ab;
     border: none;
     color: white;
-    padding: 10px 22px;
-    font-size: 1.1rem;
-    border-radius: 8px;
+    padding: 14px 0;
+    font-size: 1.2rem;
+    border-radius: 12px;
     cursor: pointer;
     user-select: none;
     transition: background-color 0.3s ease;
+    box-shadow: 0 4px 8px rgba(0,71,171,0.6);
   }
   button:disabled {
     background-color: #7f9ccf;
     cursor: not-allowed;
+    box-shadow: none;
   }
-  button:hover:not(:disabled) {
+  button:hover:not(:disabled),
+  button:focus:not(:disabled) {
     background-color: #003380;
+    outline: none;
+    box-shadow: 0 0 12px #003380aa;
   }
   footer {
     text-align: center;
-    padding: 12px 8px;
-    font-size: 0.9rem;
+    padding: 14px 10px;
+    font-size: 1rem;
     color: #555;
+    user-select: none;
+  }
+
+  /* Responsive tweaks */
+  @media (max-width: 450px) {
+    .flashcard-container {
+      height: 220px;
+    }
+    .flashcard-front .arabic {
+      font-size: 1.7rem;
+    }
+    .flashcard-front {
+      font-size: 1.1rem;
+    }
+    .flashcard-back {
+      font-size: 1rem;
+    }
+    button {
+      font-size: 1rem;
+      padding: 12px 0;
+      min-width: 70px;
+    }
   }
 </style>
 </head>
